<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Age">

    <TextView
        android:id="@+id/tvTituloMasa"
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:paddingTop="30dp"
        android:text="@string/tvTituloMasa"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="384dp"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="214dp"
            android:layout_height="match_parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvEstatura1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/tvEstatura" />

                <EditText
                    android:id="@+id/edEstatura1"
                    android:layout_width="match_parent"
                    android:layout_height="98dp"
                    android:ems="10"
                    android:hint="@string/edEstatura1"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/tvPeso1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/tvPeso1" />

                <EditText
                    android:id="@+id/edPeso1"
                    android:layout_width="match_parent"
                    android:layout_height="98dp"
                    android:ems="10"
                    android:hint="@string/edPeso1"
                    android:inputType="text" />

                <Button
                    android:id="@+id/btnCalculoIngles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnCalculoIngles" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvEstatura2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/tvEstatura2" />

                <EditText
                    android:id="@+id/edEstatura2"
                    android:layout_width="match_parent"
                    android:layout_height="98dp"
                    android:ems="10"
                    android:hint="@string/edEstatura2"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/tvPeso2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/tvPeso2" />

                <EditText
                    android:id="@+id/edPeso2"
                    android:layout_width="match_parent"
                    android:layout_height="98dp"
                    android:ems="10"
                    android:hint="@string/edPeso2"
                    android:inputType="text" />

                <Button
                    android:id="@+id/btnCalculoMetrico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnCalculoMetrico" />
            </LinearLayout>

        </TableRow>

    </LinearLayout>

    <TextView
        android:id="@+id/resultMasa"
        android:textAlignment="center"
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="76dp" />
    <TextView
        android:id="@+id/resultMasa2"
        android:textAlignment="center"
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="76dp" />


</LinearLayout>