<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvPregunta3"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/tvPregunta3" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="168dp">

        <RadioButton
            android:id="@+id/btnPrgt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrgt3" />

        <RadioButton
            android:id="@+id/btnPrgt3.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrgt3.2" />

        <RadioButton
            android:id="@+id/btnPrgt3.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrgt3.3" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvPregunta4"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/tvPregunta4" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="148dp">

        <RadioButton
            android:id="@+id/btnPrgt4.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrgt4.3" />

        <RadioButton
            android:id="@+id/btnPrgt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrgt4" />

        <RadioButton
            android:id="@+id/btnPrgt4.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrgt4.2" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSgt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSgt2" />

</LinearLayout>