<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Age">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:paddingTop="40dp"
        android:text="@string/tvTitulo"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edAño"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:ems="10"
        android:hint="@string/edAño"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/edAñoNac"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:ems="10"
        android:hint="@string/edAñoNac"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCalcular" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:paddingTop="30dp"
        android:textAlignment="center" />

</LinearLayout>