<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvPregunta5"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/tvPregunta5" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="168dp">

        <RadioButton
            android:id="@+id/btnPrgt5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrgt5" />

        <RadioButton
            android:id="@+id/btnPrgt5.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrgt5.2" />

        <RadioButton
            android:id="@+id/btnPrgt5.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrgt5.3" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvPregunta6"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/tvPregunta6" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="148dp">

        <RadioButton
            android:id="@+id/btnPrgt6.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrgt6.3" />

        <RadioButton
            android:id="@+id/btnPrgt6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrgt6" />

        <RadioButton
            android:id="@+id/btnPrgt6.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrgt6.2" />
    </RadioGroup>

    <Button
        android:id="@+id/btnFin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnFin" />

    <TextView
        android:id="@+id/txresultado"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:paddingTop="25dp"
        android:text=""
        android:textAlignment="center" />

</LinearLayout>